--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 
   </head>
   <body>
+    <div class="canvas">
+      <div class="slidecontainer">
+  <input type="range" min="0" max="255" value="50" class="sliderr" id="Red">
+        <input type="range" min="0" max="255" value="50" class="sliderg" id="Green">
+        <input type="range" min="0" max="255" value="50" class="sliderb" id="Blue">
+        <input type="range" min="0" max="25" value="5" class="slidergr" id="gradientS">
+
+</div>
+ 
+<button id="solid">SOLID</button> 
+<button id="gradient">GRADIENT</button> 
+
+</div>  
     <script src="sketch.js"></script>
   </body>
 </html>
